--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,10 +25,13 @@
 
 @import url("https://fonts.cdnfonts.com/css/bw-vivant");
 
+@import url('https://fonts.cdnfonts.com/css/oregon-ldo');
+
+
 :root {
   --default-font: "Source Sans Pro Light", sans-serif;
   --heading-font: "Bw Vivant", sans-serif;
-  --nav-font: "Bw Vivant", sans-serif;
+  --nav-font: "Oregon LDO Book", sans-serif;
 }
 
 :root {
@@ -806,7 +809,7 @@ h6 {
 
 .scroll-top i {
   font-size: 24px;
-  color: var(--contrast-color);
+  color: var(--heading-color);
   line-height: 0;
   font-weight: 200;
   transform: scaleX(1.1); /* Aumenta a largura do ícone */
@@ -1486,7 +1489,7 @@ ul {
   }
 
   .cirurgias .nav-link.active {
-    color: white;
+    color: var(--heading-color);
     background: var(--accent-color);
   }
 }
