--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -680,18 +680,19 @@ h6 {
 .footer {
   color: var(--default-color);
   background-color: #b7b8ba;
-  font-size: 14px;
   text-align: center;
-  padding: 30px 0;
+  padding: 40px 0;
   position: relative;
 }
 
 .footer h1 {
-  font-size: 1.7em; /* 48px ÷ 16 = 3rem */
+  font-size: 1.5em; /* 48px ÷ 16 = 3rem */
   font-weight: 200;
   margin-bottom: 0.5rem;
   animation: fadeInDown 1s both;
   font-family: "Wild and Folk Regular", sans-serif;
+  letter-spacing: 4px;
+
 }
 
 .footer h3 {
