--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -738,6 +738,7 @@ h6 {
 }
 
 .footer .copyright {
+  font-size: 13px;
   padding-top: 25px;
   border-top: 1px solid
     color-mix(in srgb, var(--default-color), transparent 78%);
